tasksel (1.0-4) frozen unstable; urgency=low

  * More changes from Joey Hess; adds buttons to clear up main screen;
    more consistency changes
  * Adds scroll support to dialogs and main menu

 -- Randolph Chung <tausq@debian.org>  Sat, 15 Jan 2000 14:33:56 -0700

tasksel (1.0-3) unstable; urgency=low

  * Lots of changes from Joey Hess: (re bug#54250)
    - Uses [ ] instead of ( ) for consistency with dbootstrap
    - Changed highlighting, buttons and prompting behavior
    - left justify screen title
    - cosmetic changes to list display
  * tasksel now has its own cvs respository

 -- Randolph Chung <tausq@debian.org>  Sun,  9 Jan 2000 22:58:22 -0700

tasksel (1.0-2) unstable; urgency=low

  * Alpha sorts package names (closes: #52960)
  * Make color scheme more consistent with dbootstrap (closes: #52898)

 -- Randolph Chung <tausq@debian.org>  Wed, 29 Dec 1999 09:32:52 -0700

tasksel (1.0-1) unstable; urgency=low

  * Initial Release.

 -- Randolph Chung <tausq@debian.org>  Wed,  8 Dec 1999 21:49:42 -0700

Local variables:
mode: debian-changelog
End: